--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ Curabitur quis sagittis enim. Vivamus facilisis faucibus nibh nec varius. Maecen
 
 Aenean eu orci nec lorem imperdiet consectetur. Suspendisse nec dolor lectus. Nulla volutpat eget diam id dictum. Nam vel tincidunt leo. Nunc aliquam vel nisl ut pretium. Nunc molestie elit tortor, sit amet sodales enim viverra et. Nullam libero erat, pretium a turpis molestie, elementum faucibus ex.</p>
   <h1 id="poopoo">Heading</h1>
-                                            <img decoding="async" src="https://github.com/llamahead/bug/raw/main/Minecraft_Grass_Block.usdz"/>
+        <img decoding="async" src="https://raw.githubusercontent.com/llamahead/bug/main/Minecraft_Grass_Block.usdz">
     </body>
     
 </html>
